@@ -1,1 +1,1 @@
-3	rainbowbook	2	#	65256473	1	NZL	Roar of the Lion	0-7322-8272-1	UK-Trade Paper	Active Record		Frank Coates	HarperCollins Publishers Australia	052007	36.99			0	#	64970973	1	AUS	Roar of the Lion	0-7322-8272-1	UK-Trade Paper	Active Record		Frank Coates	HarperCollins Publishers Australia	042007	32.99			0		
+3	rainbowbook	3	#	64970973	1	AUS	Roar of the Lion	978-0-7322-8272-1	UK-Trade Paper	Out of Print		Coates, Frank	HarperCollins Publishers Australia	042007	32.99	AUSTRALIA	402956	$	FICTION	FICTION / General		FICTION & RELATED ITEMS			0		
