@@ -1,1 +1,1 @@
-3	rainbowbook	63006879:USA60408096:AUS60717976:NZL	#	63006879	1	USA	Affluenza:When Too Much Is Never Enough	1-74114-671-2	Trade Paper	Active Record		Clive Hamilton	Allen & Unwin Pty., Limited	042006	14.95		ALB,BDT,BLK,BNT,GRD	8	Alibris, Emeryville, CA	Available for order		0	03/30/2007	Brodart Company, Williamsport, PA	Available for order		0	04/02/2007	Blackwell North America, Lake Oswego, OR	In stock		0	04/03/2007	Baker & Taylor Books, Bridgewater, NJ			4	04/02/2007	Baker & Taylor Books, Commerce, GA			3	04/02/2007	Baker & Taylor Books, Momence, IL			36	04/02/2007	Baker & Taylor Books, Reno, NV			4	04/02/2007	Gardners Books Limited, E. Sussex	Available for order		0	03/29/2007#	60408096	1	AUS	Affluenza:When Too Much Is Never Enough	1-74114-671-2	Trade Paper	Active Record		Clive Hamilton	Allen & Unwin Pty., Limited	062005	24.95		ALB,BDT,BLK,BNT,GRD	8	Alibris, Emeryville, CA	Available for order		0	03/30/2007	Brodart Company, Williamsport, PA	Available for order		0	04/02/2007	Blackwell North America, Lake Oswego, OR	In stock		0	04/03/2007	Baker & Taylor Books, Bridgewater, NJ			4	04/02/2007	Baker & Taylor Books, Commerce, GA			3	04/02/2007	Baker & Taylor Books, Momence, IL			36	04/02/2007	Baker & Taylor Books, Reno, NV			4	04/02/2007	Gardners Books Limited, E. Sussex	Available for order		0	03/29/2007#	60717976	1	NZL	Affluenza:When Too Much Is Never Enough	1-74114-671-2	Trade Paper	Active Record		Clive Hamilton	Allen & Unwin Pty., Limited	062005	29.99		ALB,BDT,BLK,BNT,GRD	8	Alibris, Emeryville, CA	Available for order		0	03/30/2007	Brodart Company, Williamsport, PA	Available for order		0	04/02/2007	Blackwell North America, Lake Oswego, OR	In stock		0	04/03/2007	Baker & Taylor Books, Bridgewater, NJ			4	04/02/2007	Baker & Taylor Books, Commerce, GA			3	04/02/2007	Baker & Taylor Books, Momence, IL			36	04/02/2007	Baker & Taylor Books, Reno, NV			4	04/02/2007	Gardners Books Limited, E. Sussex	Available for order		0	03/29/2007	
+3	rainbowbook	3	#	63006879	1	USA	Affluenza:When Too Much Is Never Enough	978-1-74114-671-4	Perfect	Active Record		Hamilton, Clive	Allen & Unwin	042006	14.95	AUSTRALIA	33545	$	CONSUMER STUDIES	SOCIAL SCIENCE / General		SOCIETY & SOCIAL SCIENCES		BDT,BNT,GRD,ING	7	Brodart Company, Williamsport, PA	Available for order		0	09/25/2008	Baker & Taylor Books, Bridgewater, NJ			1	10/01/2008	Baker & Taylor Books, Commerce, GA			0	10/01/2008	Baker & Taylor Books, Momence, IL		2	6	10/01/2008	Baker & Taylor Books, Reno, NV			6	10/01/2008	Gardners Books Limited, E. Sussex	Available for order		0	10/01/2008	Ingram Book Company, La Vergne, TN	Available for order		0	10/01/2008	
