@@ -1,5 +1,8 @@
 v0.7 (2nd October 2008)
 - Moved out of the RBook namespace
+- Added GBIP::Title#to_yaml
+- Update to using the version 3 protocol
+  - extra return data (including subjects and publication country)
 
 v0.6 (6th June 2008)
 - Added support for a timeout option in case the server takes too long to respond
